# expertise-is-what-you-need

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: traces_config.ollama.yaml.template  traces_config.yaml.template
docs/: NANOCURCUMIN_CASE_STUDY.md  REQUEST_TEMPLATES.md  WAKEFIELD_CASE_STUDY.md
scripts/: parse_patterns.py  validate_signal_detector.py
tests/: __init__.py  conftest.py  helpers.py  test_calibration_cache.py  test_calibration_diff.py  test_calibration_domain.py  test_calibration_findings_renderer.py  test_calibration_integration.py  test_calibration_judge.py  test_calibration_judge_orchestrator.py  test_calibration_llm_client.py  test_calibration_models.py  test_calibration_payload.py  test_calibration_recommender.py  test_calibration_rescoring.py  test_calibration_scorer_map.py  test_calibration_starred_selection.py  test_cli_support.py  test_config_load.py  test_corpus_loader.py  test_e2e.py  test_grobid_stage.py  test_inspect.py  test_is_scorer.py  test_judge_aggregation.py  test_judge_cache.py  test_judge_cache_policy.py  test_judge_cli.py  test_judge_config_validation.py  test_judge_consistency.py  test_judge_cost.py  test_judge_domain.py  test_judge_evidence.py  test_judge_models.py  test_judge_orchestrator.py  test_judge_panel.py  test_judge_payload.py  test_judge_promotion.py  test_judge_prompt_assets.py  test_judge_report_adapter.py  (+13 more)
tests/fixtures/: fioranelli_partial_refusal.txt  macchiarini_canned_disclaimer.txt
tests/influence/: test_signal_detection.py  (+1 more)
traces/: __init__.py  __main__.py  cli_support.py  inspect.py
(+200 files in other folders)
